Grace/tests/gibbs/errors/t136.grace
// ERROR = P1036
var x := ()
